(Format: Year/Month/Day)
Changes for 0.9.14:
*05/08/31:
   * Added SVN Revision number output in info output (Thanks php-coder)
     nls/*/Translation.m, nls/fluxbox-nls.hh src/main.cc
*05/08/30:
   * Added el_GR (greek) Translation (thanx to Theofilos Intzoglou)
     nls/el_GR/*
*05/08/23:
   * Fixed unresolved symbols when configure --disable-regexp (Mathias)
     src/Makefile.am
*05/08/17:
   * Added the 'Education' submenu to fbgm (thanx Lam)
     fluxbox-generate_menu.in
*05/08/15
   * Added uk_UA locales (Thanks Anatoli Sakhnik and php-coder)
     nls/uk_UA/*, configure.in, nls/Makefile.ams
*05/07/25:
    Fix for #1240248, Segfaults for :MoveTabLeft/Right (Mathias)
    Container.cc FbWinFrame.cc Window.cc
*05/07/20:
    Changed some *Focus options (Mathias)
    removed SloppyFocus, SemiSloppyFocus and ClickToFocus options
    added MouseFocus, ClickFocus, MouseTabFocus, ClickTabFocus
    - MouseFocus - change the focus to the window under the mouse
      (almost similar to the 'old' SloppyFocus)
    - ClickFocus - change the focus to the window the user clicks
    - MouseTabFocus - change active tabclient to the one under the
      mouse in titlebar, does NOT change the focus
    - ClickTabFocus - change active tabclient when clicked onto a 
      tabbutton
    to achieve former SemiSloppyFocus behavior one needs MouseFocus and
    ClickTabFocus
    Window.cc Screen.cc/hh ScreenResource.cc FocusModelMenuItem.hh fluxbox.cc
    nls/fluxbox-nls.hh and some nls/*/Translation.m
*05/07/13:
    Dragging a tab button from current titlebar onto current client area will
    detach that client (Mathias)
    Window.cc
*05/07/12:
    Renaming of 'bsetroot' to 'fbsetroot' (Mathias)
    blackbox's 'bsetroot' and fluxbox's 'bsetroot' have different syntax
    nowadays and collide when you install fluxbox and blackbox. hence
    the renaming
    updated manpage, helper utils (fbgm, startfluxbox, fbsetbg), nls etc
*05/07/06:
    Added even more applications to fbgm (Mathias)